crates/aranya-policy-lang/tests/data/invalid_is.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
  = note:  --> 2:17
            |
          2 |     return x is Sum
            |                 ^---
            |
            = expected None or Some
